--- a/src/main/resources/CSS/TraCuuHoaDon.css
+++ b/src/main/resources/CSS/TraCuuHoaDon.css
@@ -38,13 +38,15 @@
 .filter-box {
     -fx-background-color: #efefef;
     -fx-background-radius: 15;
-    -fx-padding: 15;
 }
 
 .filter-title {
     -fx-font-weight: bold;
     -fx-font-size: 18px;
+    -fx-background-color: white;
     -fx-text-fill: #333;
+    -fx-alignment: center;
+    -fx-background-radius: 20 20 28 28;
 }
 
 
@@ -113,10 +115,11 @@
 
 
 .center_section-background{
-    -fx-background-color: #ffffff;
+    -fx-background-color: #efefef;
     -fx-padding: 15;
     -fx-background-radius: 20;
     -fx-border-radius: 20;
+    -fx-border-color: #ddd;
     -fx-border-width: 1;
 }
 
@@ -133,7 +136,7 @@
 }
 
 .right-section{
-    -fx-background-color: #ffd1b5;
+    -fx-background-color: white;
     -fx-background-radius: 32 0 0 32;
     -fx-border-radius: 32 0 0 32;
 }
@@ -151,6 +154,9 @@
     -fx-font-weight: bold;
     -fx-alignment: center;
     -fx-text-alignment: center;
+    -fx-background-color: #E6763E;
+    -fx-text-fill: white;
+    -fx-background-radius: 20;
 }
 
 .text-field:disabled, .text-area:disabled {
@@ -212,7 +218,27 @@
     -fx-pref-width: 0;
 }
 
+.scroll-pane > .viewport {
+    -fx-background-color: #EFEFEF;
+    -fx-background-radius: 20;
+    -fx-background-insets: 0;
+}
 
+.tt_box {
+    -fx-background-color: #FFFFFF;
+    -fx-background-radius: 20 20 28 28;
+}
+.confirm-btn {
+    -fx-background-color: #4CAF50;
+    -fx-text-fill: white;
+    -fx-font-size: 16px;
+    -fx-font-weight: bold;
+    -fx-background-radius: 10;
+    -fx-pref-height: 45;
+}
+.confirm-btn:hover {
+    -fx-background-color: #43A047;
+}
 
 
 
