--- a/src/main/resources/FXML/KhuyenMai.fxml
+++ b/src/main/resources/FXML/KhuyenMai.fxml
@@ -30,19 +30,18 @@
             <padding>
                 <Insets bottom="10" left="10" right="10" top="10" />
             </padding>
-            <VBox prefHeight="816.0" prefWidth="700.0" style="-fx-background-color: efefef; -fx-background-radius: 20 28 20 28;">
+            <VBox prefHeight="612.0" prefWidth="624.0" style="-fx-background-color: #efefef; -fx-background-radius: 20 28 20 28;">
                 <children>
                <HBox prefHeight="55.0" prefWidth="624.0" styleClass="tt_box">
                   <children>
-      
-                          <!-- Tiêu đề -->
                           <Label prefHeight="53.0" prefWidth="624.0" styleClass="center-title" text="Danh sách khuyến mãi" />
                   </children>
                </HBox>
+               <AnchorPane prefHeight="28.0" prefWidth="624.0" />
 
                     <ScrollPane fitToWidth="true" prefHeight="547.0" prefWidth="612.0" styleClass="scroll-list" VBox.vgrow="ALWAYS">
                         <content>
-                            <VBox prefHeight="524.0" prefWidth="599.0" spacing="8" styleClass="vbox_center-scroll">
+                            <VBox prefHeight="510.0" prefWidth="614.0" spacing="8" styleClass="vbox_center-scroll">
                                 <HBox alignment="CENTER_LEFT" spacing="10" styleClass="order-card">
                                     <StackPane style="-fx-background-radius: 10 0 0 10; -fx-overflow: hidden;">
                                         <ImageView fitHeight="60" fitWidth="60" preserveRatio="false">
@@ -54,7 +53,7 @@
                                     <VBox spacing="2" HBox.hgrow="ALWAYS">
                                         <Label styleClass="promo-id" text="KM0001" />
                                         <HBox spacing="15">
-                                            <Label prefHeight="17.0" prefWidth="90.0" styleClass="promo-date" text="Ngày bắt đầu : 21-08-2025" />
+                                            <Label prefHeight="17.0" prefWidth="155.0" styleClass="promo-date" text="Ngày bắt đầu : 21-08-2025" />
                                             <Label prefHeight="17.0" prefWidth="164.0" styleClass="promo-date" text="Ngày kết thúc : 12-10-2025">
                                     <HBox.margin>
                                        <Insets left="130.0" />
@@ -103,29 +102,33 @@
             </VBox>
 
               <!-- Bộ lọc và tìm kiếm -->
-              <VBox spacing="8" styleClass="filter-box">
-                  <Label prefHeight="47.0" prefWidth="594.0" styleClass="filter-title" text="Bộ lọc" />
+              <VBox prefHeight="162.0" prefWidth="624.0" spacing="8" styleClass="filter-box">
+                <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: white; -fx-background-radius: 20 20 28 28;">
+                   <children>
+                            <Label prefHeight="39.0" prefWidth="624.0" styleClass="filter-title" text="Bộ lọc" />
+                   </children>
+                </HBox>
 
-                  <GridPane hgap="10" prefWidth="626.0" vgap="10">
+                  <GridPane hgap="10" prefHeight="98.0" prefWidth="614.0" style="-fx-padding: 10;" vgap="10">
                       <columnConstraints>
-                          <ColumnConstraints percentWidth="20" />
-                          <ColumnConstraints percentWidth="30" />
-                          <ColumnConstraints percentWidth="20" />
-                          <ColumnConstraints percentWidth="30" />
+                          <ColumnConstraints percentWidth="20.0" />
+                          <ColumnConstraints percentWidth="30.0" />
+                          <ColumnConstraints percentWidth="20.0" />
+                          <ColumnConstraints percentWidth="30.0" />
                       </columnConstraints>
                       <!-- Hàng 1 -->
                       <Label styleClass="label_filter" text="Mã bàn:" GridPane.columnIndex="0" />
-                      <TextField prefHeight="50.0" promptText="Value" styleClass="filter-tf" GridPane.columnIndex="1" />
+                      <TextField prefHeight="21.0" prefWidth="360.0" promptText="Value" styleClass="filter-tf" GridPane.columnIndex="1" />
 
                       <Label styleClass="label_filter" text="Thời gian:" GridPane.columnIndex="2" />
-                      <TextField prefHeight="50.0" promptText="dd/mm/yyyy" styleClass="filter-tf" GridPane.columnIndex="3" />
+                      <TextField prefHeight="21.0" prefWidth="220.0" promptText="dd/mm/yyyy" styleClass="filter-tf" GridPane.columnIndex="3" />
 
                       <!-- Hàng 2 -->
                       <Label styleClass="label_filter" text="SDT:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-                      <TextField prefHeight="50.0" promptText="Value" styleClass="filter-tf" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                      <TextField prefHeight="30.0" prefWidth="372.0" promptText="Value" styleClass="filter-tf" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
                       <Label styleClass="label_filter" text="Khu vực:" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                      <ComboBox prefHeight="50.0" promptText="-- chọn --" styleClass="uudai_combobox filter-tf" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                      <ComboBox prefHeight="30.0" prefWidth="312.0" promptText="-- chọn --" styleClass="uudai_combobox filter-tf" GridPane.columnIndex="3" GridPane.rowIndex="1" />
                       <rowConstraints>
                           <RowConstraints />
                           <RowConstraints />
@@ -136,7 +139,7 @@
                   </GridPane>
 
                   <!-- Hàng nút -->
-                  <HBox alignment="CENTER_RIGHT" spacing="10">
+                  <HBox alignment="CENTER_RIGHT" spacing="10" style="-fx-padding: 10;">
                       <Button styleClass="btn-clear" text="Xóa trắng" />
                       <Button styleClass="btn-search" text="Tìm kiếm" />
                       <VBox.margin>
@@ -192,7 +195,7 @@
                     <TextField promptText="10%" GridPane.columnIndex="1" GridPane.rowIndex="6" />
 
                     <Label styleClass="label_infoOrder" text="Ưu đãi:" GridPane.rowIndex="7" />
-                    <ComboBox promptText="Tổng hóa đơn" styleClass="uudai_combobox" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                    <ComboBox prefHeight="30.0" prefWidth="213.0" promptText="Tổng hóa đơn" styleClass="uudai_combobox" GridPane.columnIndex="1" GridPane.rowIndex="7" />
                <rowConstraints>
                   <RowConstraints />
                   <RowConstraints />
