--- a/src/main/resources/CSS/checkin.css
+++ b/src/main/resources/CSS/checkin.css
@@ -58,7 +58,7 @@
 
 
 .right-pane {
-    -fx-background-color: #ffe8dc;
+    -fx-background-color: white;
     -fx-background-radius: 20;
     -fx-border-radius: 20;
 }
@@ -111,7 +111,7 @@
     -fx-background-color: #D9D9D9
 }
 .right{
-    -fx-background-color: #FFD1B5;
+    -fx-background-color: white;
     -fx-background-radius: 20 0 0 20;
 }
 .right-sidebar {
@@ -123,7 +123,7 @@
 .sidebar-title {
     -fx-font-size: 18px;
     -fx-font-weight: bold;
-    -fx-text-fill: #333;
+    -fx-text-fill: white;
 }
 .section-title{
     -fx-background-color: white;
